--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "deploy": "node scripts/gh-pages-deploy.js"
+    "deploy": "node scripts/gh-pages-deploy.js",
+    "tailwind-config-viewer": "tailwind-config-viewer -o"
   },
   "dependencies": {
     "core-js": "^3.8.3",
@@ -23,6 +24,7 @@
     "eslint-plugin-vue": "^8.0.3",
     "execa": "latest",
     "postcss": "^8.4.21",
+    "tailwind-config-viewer": "^1.7.2",
     "tailwindcss": "^3.2.4"
   },
   "eslintConfig": {
