--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "tailwind-config-viewer": "tailwind-config-viewer -o"
   },
   "dependencies": {
+    "axios": "^1.3.2",
     "core-js": "^3.8.3",
+    "vee-validate": "^4.7.3",
     "vue": "^3.2.13"
   },
   "devDependencies": {
