--- a/package.json
+++ b/package.json
@@ -45,5 +45,17 @@
     "tailwind-config-viewer": "^1.7.2",
     "tailwindcss": "^3.2.7",
     "typescript": "^4.9.5"
-  }
+  },
+  "description": "### О проекте",
+  "main": "postcss.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/drink-and-talk/drink-and-talk_frontend.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/drink-and-talk/drink-and-talk_frontend/issues"
+  },
+  "homepage": "https://github.com/drink-and-talk/drink-and-talk_frontend#readme"
 }
